# hof-comp-gocpp

./: Ergebnisse.csv  README.md
CppExamples/: CMakeLists.txt  exampelClosureImplementation.cpp  main.cpp  test.h  testFunctionCapture.cpp  testFunctionHeap.cpp  testFunctionPointer.cpp  testFunctionPure.cpp  testLambda.cpp  testLambdaCapture.cpp  testLambdaLift.cpp  testStructHeap.cpp
GoExamples/: FunctionCapture.go  FunctionCapture2.go  FunctionCapture2_test.go  FunctionCapture_test.go  FunctionHeap.go  FunctionHeap2.go  FunctionHeap2_test.go  FunctionHeap_test.go  FunctionPure2_test.go  FunctionPure_test.go  go.mod
